--- a/reverse.html
+++ b/reverse.html
@@ -8,6 +8,6 @@
     <p>Enter some letters</p>
     <input type="text" id="text">
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="reverse.js"></script>
+    <script src="reverser/src/reverser.js"></script>
   </body>
 </html>
