--- a/reverse.html
+++ b/reverse.html
@@ -4,6 +4,7 @@
 
   <body>
     <h1>Reverse Letters</h1>
+    <p>"Write a subroutine, function, or method that takes an array of characters and returns an array of the same characters in reversed order with every consonant between 'a' and 'z' lower cased and every vowel between 'a' and 'z' upper cased.  Prove your implementation works."</p>
     <p id="reversed"></p>
     <p>Enter some letters</p>
     <input type="text" id="text">
